unpackaged/main/default/objects/SBQQ__Quote__c/fields/Additional_Discount_from_Quote_LIne__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discount_from_Quote_LIne__c</fullName>
    <description>to find the Additional discount from Quote Lines</description>
    <label>Additional Discount from Quote LIne</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__AdditionalDiscount__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>