unpackaged/main/default/objects/SBQQ__Quote__c/fields/Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Revenue__c</fullName>
    <label>Annual Recurring Revenue</label>
    <summarizedField>SBQQ__QuoteLine__c.QS_Annual_Recurring_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>SaaS, Recurring</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>