unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Justification__c.field-meta.xml
<CustomField>
    <fullName>Approval_Justification__c</fullName>
    <label>Approval Justification</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>