unpackaged/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <label>Quote Line Views</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saas_Line_Editor</fullName>
                <default>true</default>
                <label>Saas_Line_Editor</label>
            </value>
            <value>
                <fullName>SBQQ__LineEditor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>