unpackaged/main/default/objects/SBQQ__Quote__c/fields/Manager_field__c.field-meta.xml
<CustomField>
    <fullName>Manager_field__c</fullName>
    <formula>Owner:User.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager field</label>
    <type>Text</type>
</CustomField>