unpackaged/main/default/objects/SBQQ__Quote__c/fields/My_Team__c.field-meta.xml
<CustomField>
    <fullName>My_Team__c</fullName>
    <formula>($User.Id = Owner:User.Id) || ((Owner:User.Manager.Id = $User.Id) || ((Owner:User.Id = $User.ManagerId)))</formula>
    <label>My Team</label>
    <type>Checkbox</type>
</CustomField>