unpackaged/main/default/objects/SBQQ__Quote__c/fields/Non_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Non_Recurring_Revenue__c</fullName>
    <label>Non-Recurring Revenue</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>One-Time</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>