unpackaged/main/default/objects/SBQQ__Quote__c/fields/Opty_Order_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Opty_Order_Subtype__c</fullName>
    <formula>IF(ISPICKVAL(SBQQ__Opportunity2__r.Order_Subtype__c,&#39;Full Cancellation&#39; ),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opty Order Subtype</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>