unpackaged/main/default/objects/SBQQ__Quote__c/fields/QL_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>QL_Product_Category__c</fullName>
    <label>QL Product Category</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Category__c</field>
        <operation>equals</operation>
        <value>Professional Services</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>