unpackaged/main/default/objects/SBQQ__Quote__c/recordTypes/Locked.recordType-meta.xml
<RecordType>
    <fullName>Locked</fullName>
    <active>true</active>
    <label>Locked</label>
</RecordType>