unpackaged/main/default/objects/SBQQ__Quote__c/recordTypes/Unlocked.recordType-meta.xml
<RecordType>
    <fullName>Unlocked</fullName>
    <active>true</active>
    <label>Unlocked</label>
</RecordType>