unpackaged/main/default/objects/SBQQ__Quote__c/validationRules/Quote_Start_Date_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Start_Date_is_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( SBQQ__StartDate__c )</errorConditionFormula>
    <errorDisplayField>SBQQ__StartDate__c</errorDisplayField>
    <errorMessage>Start Date is Required</errorMessage>
</ValidationRule>